@@ -80,6 +80,7 @@ Requirements
     gnome-python2 >= 2.12
     glib2 >= 2.10
     gnome-python2-bonobo >= 2.12
+	GConf2-devel
     
   To use the Python console plugin, install the ipython package. It too can be 
   installed using yum.
