@@ -1,8 +1,15 @@
 2007-04-24  Eitan Isaacson  <eitan@ascender.com>
 
+	* README: Added gconf-dev as a requirement for builing from SVN.
+	* plugins/ipython_view.py: * plugins/ipython_view.py: Fixed home
+	and left key behavior (bug 431882).
+
+2007-04-24  Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/ipython_view.py: Fixed argv being None (bug 431878).
 
 2007-04-23  Eitan Isaacson  <eitan@ascender.com>
+	
 	* plugins/api_view.py: Added localized name (bug 432832).
 	* plugins/console.py: Added localized name (bug 432832).
 	* plugins/event_monitor.py: Added localized name (bug 432832).
